# voice-note

./: README.md  pyproject.toml  setup.py
voice_note/: README.md  hooks.py
voice_note/public/css/: voice_app.css
voice_note/public/js/: voice_recorder.js
voice_note/voice_channel/: __init__.py
voice_note/voice_channel/api/: voice.py
voice_note/voice_channel/doctype/channel_member/: __init__.py  channel_member.py
voice_note/voice_channel/doctype/channel_timeline_item/: __init__.py  channel_timeline_item.py
voice_note/voice_channel/doctype/voice_channel/: voice_channel.py
voice_note/voice_channel/page/voice_channel_ui/: voice_channel_ui.css  voice_channel_ui.js  voice_channel_ui.json
voice_note/voice_channel/workspace/voice_channel/: voice_channel.json
voice_note/voice_note/: modules.txt
voice_note/voice_note/public/css/: voice_channel.css
voice_note/voice_note/voice_channel/api/: voice.py
voice_note/voice_note/voice_channel/doctype/channel_member/: channel_member.json  channel_member.py
voice_note/voice_note/voice_channel/doctype/channel_timeline_item/: channel_timeline_item.json
voice_note/voice_note/voice_channel/doctype/voice_channel/: __init__.py  voice_channel.json  voice_channel.py
voice_note/voice_note/voice_channel/page/: __init__.py
voice_note/voice_note/voice_channel/page/voice_channel_ui/: __init__.py  voice_channel_ui.html  voice_channel_ui.js  voice_channel_ui.json
voice_note/www/: voice-channels.html  voice-channels.py  voice-portal.html  voice-portal.py
