[project]
name = "voice_note"
version = "1.0.0"
description = "Voice Channel - Team communication with voice notes, text notes, and todos"
authors = [
    {name = "ITQAN LLC", email = "info@itqan-kw.net"}
]
requires-python = ">=3.10"
dependencies = ["frappe"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench]
app-name = "voice_note"
